--- a/img.css
+++ b/img.css
@@ -1,92 +1,47 @@
 .container{
-   position: relative;
-    /* position: relative; */
-    top: 50px;
-   /* background-color: brown; */
-left: 0px;
-right: 500px;
-
-}
-.leftside{
-    position: absolute;
-    top: -20px;
-    background-color: #0e0e0e;
-    left: 0px;
-    height: 1200px;
-    width: 50px;
-}
-.rightside{
-    position: absolute;
-    top: -20px;
-    background-color: #0e0e0e;
-    left: 1299px;
-    height: 1200px;
-    width: 50px;
+    position: relative;
+display: flex;
+margin-left: 3.7vw;
+width: 92.547vw;
+/* background-color: blueviolet; */
+overflow-x: scroll;
 }
 
 
+.container::-webkit-scrollbar {
+    width: 2px;
+ }
+ 
+ .featuredImages::-webkit-scrollbar {
+  height: 8px;
+ }
+ 
+ .featuredImages::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    -webkit-box-shadow: inset 1px 1px 10px#8a8a8a00;
+ 
+   
+ }
 
-
-
-
-#img1{
-    height: 210px;
+.images{
+    height: 200px;
     width: 400px;
-    left: 50px;
     transition: transform 1s ease-in;
-    position: absolute;
-    cursor: grab;
-    border-radius: 5px20}
-#img2{
-    height: 210px;
-    width: 400px;
-    left: 475px;
-    transition: transform 1s ease-in;
-    position: absolute;
-    cursor: grab;
-    border-radius: 5px;
     
+ 
+}
+
+.paddingImage{
+   padding-top: 11.9521vh;
+   padding-right: 2.3734vw;
+   /* background-color: green; */
+}
+.images:hover{
+    box-shadow:  0px  0px 20px red;
 }
 
 
-#img3{
-    height: 210px;
-    width: 400px;
-    left: 900px;
-    transition: transform 1s ease-in;
-    position: absolute;
-    cursor: grab;
-    border-radius: 5px;
-}
-#img4{
-    height: 210px;
-    width: 400px;
-    left: 1325px;
-    transition: transform 1s ease-in;
-    position: absolute;
-    cursor: grab;
-    border-radius: 5px;
-}
-#img5{
-    height: 210px;
-    width: 400px;
-    left: 1750px;
-    transition: transform 1s ease-in;
-    position: absolute;
-    cursor: grab;
-    border-radius: 5px;
-}
-#img6{
-    height: 210px;
-    width: 400px;
-    left: 2175px;
-    transition: transform 1s ease-in;
-    position: absolute;
-    cursor: grab;
-    border-radius: 5px;
-}
-
-#img1:hover{
+/* #img1:hover{
     box-shadow:  0px  0px 20px red;
 }
 #img2:hover{
@@ -104,19 +59,6 @@ right: 500px;
 }
 #img6:hover{
     box-shadow:  0px  0px 20px red;
-}
-/* .images{
-    transition: all 4s ease-in;
-}
-.images{
-    transform: translateX(-450px);
-    /* transform: translateX(-900px); */
-.empty{
-    position: absolute;
-    left: 2656px;
-    height: 100px;
-    width: 40px;
-    /* background: red; */
-}
+} */
 
 
