--- a/header.css
+++ b/header.css
@@ -16,9 +16,10 @@ header{
 }
 .logo{
     position: absolute;
-    height: 90px;
-    width: 90px;
-    top: -15px;
+    height: 60px;
+    width: 80px;
+    top: 5px;
+    left: 5px;
 }
 ul{
     display: flex;
@@ -31,6 +32,7 @@ li{
     padding-left: 28px;
     list-style: none;
     font-size: 18px;
+cursor: pointer;
    
 }
 li:hover{
@@ -109,6 +111,7 @@ top: 21px;
  padding: 11px 21px 11px 21px;
     /* outline: #0e0e0e; */
     border-bottom: 1px solid #0e0e0e;
+    cursor: pointer;
 
 }
 
